add a one side capsule and content and background image

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -13,63 +13,78 @@
 </head>
 
 <body style="font-family: 'Montserrat', sans-serif;">
-  <header class="text-black bg-transparent">
-    <div class="flex h-28 justify-around items-center">
-      <a class="items-center">
-        <h1 class="ml-40 font-bold text-3xl">Portfolio Creator<span class="hero-gradient-heading">.</span></h1>
-      </a>
-      <nav>
-        <ul class="flex flex-wrap justify-end items-center gap-16 mr-40 font-bold text-sm">
-          <li><a href="">About</a> </li>
-          <li><a href="">Resume</a></li>
-          <li><a href="">Projects</a></li>
-          <li><a href="">Blog</a></li>
-          <li><a href="">Contact</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-
-  <main>
-    <div class="flex justify-center mt-56 font-semibold text-2xl">
-      <h2>Hello, my name is</h2>
-    </div>
-    <div class="flex justify-center pt-5 font-bold text-7xl">
-      <h3 class="hero-gradient-heading">Dishank Patel</h3>
-    </div>
-    <div class="flex justify-center pt-10 font-semibold text-1xl">
-      <h4>I'm a Full Stack Developer based in India. I want to make things that make a difference.</h4>
-    </div>
-    <div class="flex justify-center pt-10">
-      <button class="p-4 pr-20 pl-20 border-2 rounded-full hero-gradient-heading border-black	font-bold text-lg">HIRE ME
-        TODAY
-        <!-- <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="arrow-right"
-          class="svg-inline--fa fa-arrow-right fa-w-14 p-16" role="img" xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 448 512">
-          <path fill="currentColor"
+  <div class=" container m-auto">
+    <header class="text-black bg-transparent">
+      <div class="flex h-28 justify-around items-center">
+        <a class="items-center">
+          <h1 class="ml-40 font-bold text-3xl">Portfolio Creator<span class="hero-gradient-heading">.</span></h1>
+        </a>
+        <nav>
+          <ul class="flex flex-wrap justify-end items-center gap-16 mr-40 font-bold text-sm">
+            <li><a href="">About</a> </li>
+            <li><a href="">Summary</a></li>
+            <li><a href="">Resume</a></li>
+            <li><a href="">Projects</a></li>
+            <li><a href="">Contact</a></li>
+          </ul>
+          <!-- <div></div> -->
+          <div></div>
+        </nav>
+      </div>
+    </header>
+  </div>
+  <main class=" bg-img">
+    <div class="flex flex-col items-center h-screen place-content-center banner-1">
+      <div class="font-semibold text-2xl">
+        <h2>Hello, my name is</h2>
+      </div>
+      <div class="pt-5 font-bold text-7xl">
+        <h3 class="hero-gradient-heading">Dishank Patel</h3>
+      </div>
+      <div class="pt-10 font-semibold text-1xl">
+        <h4>I'm a Full Stack Developer based in India. I want to make things that make a difference.</h4>
+      </div>
+      <div class="pt-10">
+        <button class="p-4 pr-20 pl-20 border-2 rounded-full hero-gradient-heading border-black	font-bold text-lg">HIRE
+          ME
+          TODAY
+          <!-- <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="arrow-right"
+            class="svg-inline--fa fa-arrow-right fa-w-14 p-16" role="img" xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 448 512">
+            <path fill="currentColor"
             d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z">
           </path>
         </svg> -->
-      </button>
+        </button>
+      </div>
     </div>
   </main>
 
-  <section class="flex mt-80 justify-around">
-    <div class="mr-44 ml-20">
-      <h4 class="text-2xl font-bold">I'm Dishank Patel</h4>
-      <h5 class="text-lg font-bold mt-4 mb-4">I'm a Lead Full Stack Developer based in India</h5>
-      <p class="text-sm mb-4">I design and develop services for customers of all sizes, specializing in<br>
+  <section class="flex justify-evenly bg-black text-white p-10 w-11/12 float-right rounded-bl-full rounded-tl-full my-32">
+    <div class="ml-16">
+      <h4 class="text-2xl font-bold hero-gradient-heading">What I can do for you</h4>
+      <h5 class="text-lg mt-4 mb-4">Faster, better products that your users love.<br>Here's all the services I provide:
+      </h5>
+      <li class="font-bold mb-4">Design Strategy</li>
+      <li class="font-bold mb-4">Web and Mobile App Design</li>
+      <li class="font-bold mb-4">Front-end Development</li>
+      <!-- <p class="text-sm mb-4">I design and develop services for customers of all sizes, specializing in<br>
         creating stylish, modern websites, web services, and mobile applications.</p>
       <p class="text-sm mb-5">My passion is to design digital user experiences through bold interface<br>
-        and meaningful interactions. Check out my <strong class="hero-gradient-heading">PORTFOLIO</strong></p>
-      <button class="p-2 pr-20 pl-20 border-2 rounded-full hero-gradient-heading border-black	font-bold text-lg">CONTACT
-        ME
-      </button>
+        and meaningful interactions. Check out my <strong class="hero-gradient-heading">PORTFOLIO</strong></p> -->
+      <!-- <button class="p-2 pr-10 pl-10 border-2 rounded-full hero-gradient-heading border-black	font-bold text-lg">CONTACT ME
+      </button> -->
     </div>
-    <div>
-
+    <div class="mr-12">
+      <h4 class="text-2xl font-bold hero-gradient-heading">What you can expect</h4>
+      <h5 class="text-lg mt-4 mb-4">I design products that are more than pretty.<br>I make them shippable and usable.
+      </h5>
+      <li class="font-bold mb-4">Clean and functional</li>
+      <li class="font-bold mb-4">Device and user friendly</li>
+      <li class="font-bold mb-4">Efficient and maintainable</li>
     </div>
   </section>
+  <!-- </div> -->
 </body>
 
 </html>
