Completed tailwind style guide

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -84,7 +84,12 @@
       <li class="font-bold mb-4">Efficient and maintainable</li>
     </div>
   </section>
-  <!-- </div> -->
+  <footer>
+    <div class="flex-col flex-wrap justify-end content-end	">
+    <h6>OK, LET’S CREATE SOMETHING GREAT</h6>
+    <div>Dishank<span class="hero-gradient-heading">.</span></div>
+  </div>
+  </footer>
 </body>
 
 </html>
