--- a/my-project/index.html
+++ b/my-project/index.html
@@ -26,5 +26,14 @@
         <div></div>
       </div>
     </header>
+
+      <div>
+        <div>item1</div>
+        <div>item2</div>
+        <div>item3</div>
+        <div>item4</div>
+        <div>item5</div>
+        <div>item6</div>
+      </div>
   </body>
 </html>
